cambios agregados desde VSCODE

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>Hola Este es un primer comentario
         Al iniciar escribir: html::5 para cargar boiler de html5
+        Nueva línea de código después de crear repositorio en GIT/GITHUB
     </p>
 </body>
 </html>
